# Language

./: CMakeLists.txt  Makefile  README.md
Backend/graphviz/: graph.dot
Backend/include/: backend.h  translator.h
Backend/processor/Assembler/: res_ass.txt
Backend/processor/Assembler/include/: assembler.h
Backend/processor/Assembler/src/: assembler.cpp
Backend/processor/CPU/include/: CPU.h
Backend/processor/CPU/src/: CPU.cpp
Backend/processor/Onegin/src/: StringRead.cpp  string_read.cpp
Backend/processor/Stack/src/: stack.cpp
Backend/processor__/Assembler/: res_ass.txt
Backend/src/: input_output.cpp  main.cpp  translator.cpp
Backend/stack/include/: stack.h
Backend/stack/src/: stack.cpp
Frontend/graphviz/: graph.dot
Frontend/include/: parcer.h  simplifier.h
Frontend/src/: input_output.cpp  main.cpp  parcer.cpp  simplifier.cpp
graphviz/: graph.dot
include/: parcer.h  simplifier.h
src/: main.cpp  parcer.cpp  simplifier.cpp
text_files/: asm_file.txt  equation_solver.txt  exmp.txt  factorial.txt  file_output.txt  result_file.txt  sourse_file.txt
